# EnjaParticles

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE  README  build.xml
boids_gordon/: CMakeLists.txt  README  SWIGIFY.cmake  boids.cpp  boids.h  glincludes.h  main.cpp  maketar.x  structs.cpp  structs.h
boids_gordon/domain/: IV.cpp  IV.h
boids_gordon/swig/: CMakeLists.txt  example_boids.py  float4.i  flock.i  glboids.py  iv.i
boids_gordon/utilities/: Array3D.cpp  Array3D.h  ArrayT.h  CMakeLists.txt  CVec3.cpp  CVec3.h  GEtypes.h  Vec3.cpp  Vec3.h  Vec3i.h
cudasph/: CMakeLists.txt  README
cudasph/ConsoleTest/: CMakeLists.txt  ConsoleTest.cpp  ConsoleTest.cu
cudasph/OgreSnowSim/: BaseApplication.h  OgreCudaHelper.cpp  OgreSimBuffer.cpp  OgreSimRenderable.cpp  OgreSimRenderable.h  SnowFluid.cpp  SnowTerrain.cpp
cudasph/SPHSimLib/: CMakeLists.txt  CMakeLists_cuda.txt,v  CudaBuffer.h  K_Boundaries_Walls.cu  K_Common.cuh  K_SPH_Kernels_poly6.cu  K_SPH_Kernels_quintic.cu  K_SimpleSPH_Step1.cu  K_SimpleSPH_Step2.cu  K_SnowSPH.cu  K_SnowSPH_Step1.cu  K_UniformGrid_NeighborList.cu  SimBase.cuh  SimSettings.h  SimSimpleSPH.cu  timer.cu
cudasph/common/: COMMON_CONFIG.cmake  CUDA_CONFIG.cmake  FindCUDA_64.cmake
cudasph/enj_standalone/: CMakeLists.txt  EnjaCudaHelper.h  EnjaSimBuffer.cpp  EnjaSimBuffer.h  casting_of_structure.cpp  enja.cpp  enja.h  incopencl.h  main.cpp  main_test.cpp  materials_lights.h  opencl.cpp  render.cpp  timege.cpp  util.cpp
cudasph/environment/: setupenv_enjlin.x  setupenv_mark2.x
enjacl/: CMakeLists.txt  INSTALL  NOTES  README  SPH.cpp  SPH.h  TIMINGS  UniformGrid.cpp  enja.cl  enja.cpp  enja.h  get_source_string.cpp  incopencl.h  main.cpp  main_fountain.cpp  main_picture.cpp  main_standalone.cpp  neighbor_search.cpp  opencl.cpp  render.cpp  shaders.cpp  system.h  timege.cpp  timege.h  util.cpp  util.h
enjacl/graphics_libs/: CMakeLists.txt  README
enjacl/oclRadixSort/: RadixSort.cl
enjacl/oclRadixSortKeysValues/: README  RadixSort.cl  a.cl
enjacl/physics/: CMakeLists.txt  K_SimpleSPH_Step1.cu  K_UniformGrid_Hash.cu  K_UniformGrid_Update.cu  K_UniformGrid_Utils.cu  NOTES  SimSimpleSPH.cu  cl_macros.h  cl_snippet_sphere_forces.h  cl_structures.h  collision.cl  collision.cpp  collision_ge.cl  collision_ge_a.cl  collision_ge_b.cl  collision_ge_bb.cl  datastructures_test.cl  datastructures_test.cpp  fountain.cl  gravity.cl  lorentz.cl  lorenz.cl  neighbors.cpp  picture.cl  position.cl  sph.cl  uniform_grid_utils.cl  uniform_grid_utils.cpp  uniform_grid_utils_orig.cl  uniform_hash.cl  uniform_hash.cpp  vfield.cl
enjacl/tex/: enjalot.txt  particle.txt
gpu-sph/: CMakeLists.txt
gpu-sph/ConsoleTest/: CMakeLists.txt  ConsoleTest.vcproj  ReadMe.txt
gpu-sph/OgreSnowSim/: CudaHelpers.cu  OgreCudaHelper.h  OgreSimBuffer.cpp  OgreSimBuffer.h  OgreSimRenderable.cpp  OgreSnowSim.vcproj  SnowFluid.h  SnowGui.cpp  SnowGuiConfigPanel.cpp  SnowSimApp.cpp  SnowSimApp.h  SnowSimConfig.h  SnowTerrain.h
gpu-sph/SPHSimLib/: CMakeLists.txt  Config.h  CudaMax.cu  CudaMax.cuh  CudaUtils.cu  K_Boundaries_Common.cu  K_Boundaries_Terrain.cu  K_Boundaries_Walls.cu  K_Coloring.cu  K_Coloring.cuh  K_Common.cuh  K_SPH_Common.cu  K_SPH_Common.cuh  K_SPH_Kernels.cu  K_SPH_Kernels_cubic.cu  K_SPH_Kernels_gaussian.cu  K_SPH_Kernels_viscosity.cu  K_SimDEM.cu  K_SimpleSPH.cu  K_SimpleSPH_Integrate.cu  K_SimpleSPH_Step1.cu  K_SimpleSPH_Step2.cu  K_SnowSPH_Integrate.cu  K_SnowSPH_Step1.cu  K_SnowSPH_Step2.cu  K_SnowSPH_Step3.cu  K_UniformGrid.cuh  K_UniformGrid_NeighborList.cu  K_UniformGrid_Update.cu  K_UniformGrid_Utils.cu  ParticleData.h  README  SimBase.cu  SimBuffer.h  SimBufferCuda.cpp  SimBufferCuda.h  SimBufferManager.h  SimCudaAllocator.h  SimCudaHelper.cpp  SimCudaHelper.h  (+20 more)
gpu-sph/build_cmake/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  err
gpu-sph/common/: COMMON_CONFIG.cmake  CONFIG.cmake  FindCUDA.cmake  FindGLEW.cmake  FindOPENCL.cmake  MARK2_CONFIG.cmake  OSX_CONFIG.cmake  UBUNTU_CONFIG.cmake
gpu-sph/enj_standalone/: CMakeLists.txt  CMakeLists_standalonetest.txt  EnjaCudaHelper.cpp  EnjaCudaHelper.h  EnjaSimBuffer.cpp  EnjaSimBuffer.h  enja.cpp  enja.h  main.cpp  opencl.cpp  util.h
gpu-sph/environment/: setupenv_kirk.x  setupenv_mac.x
gpu-sph/ge_standalone/: CMakeLists.txt  ConsoleTest.cpp  README
graphics_libs/amira/: CMakeLists.txt  Endian.cpp  ReadRectilinearAmiraMesh.h  WriteAmiraMesh.cpp  WriteAmiraMesh.h  WriteSurfaceAmiraMesh.cpp  write_lineset.cpp  write_lineset.h
graphics_libs/examples/: CMakeLists.txt  README
graphics_libs/opencl_utilities/: CMakeLists.txt  Make_lib  README  array_opencl_1d.h  array_opencl_1d_cl.cpp  cl.h  cll_program.h  oclUtils.h  shrUtils.cpp  shrUtils.h
isph/: AUTHORS  CMakeLists.txt  Makefile  README
isph/cmake/: FindGLEW.cmake
isph/doc/: doxyfile  doxystyle.css
isph/environment/: setupenv_gordvislab
isph/isphlib/: CMakeLists.txt  Makefile  abstractintegrator.cpp  abstractintegrator.h  cldevice.cpp  cldevice.h  cllink.cpp  cllink.h  clplatform.cpp  clplatform.h  clprogram.cpp  clprogram.h  clsubprogram.cpp  clsubprogram.h  clsystem.cpp  clsystem.h  clvariable.cpp  clvariable.h  cpubitonicsort.cpp  cpubitonicsort.h  diffusionsimulation.cpp  diffusionsimulation.h  geometry.cpp  geometry.h  gpubitonicsort.cpp  gpubitonicsort.h  isph.h  log.cpp  log.h  o  particle.cpp  particle.h  pcintegrator.cpp  pcintegrator.h  pcisphsimulation.cpp  pcisphsimulation.h  probemanager.cpp  probemanager.h  simulation.cpp  simulation.h  (+12 more)
oclParticles/: BitonicSort_b.cl  CMakeLists.txt  Makefile  Particles.cl  TIMINGS
oclParticles/inc/: param.h  paramgl.h  render_particles.h  (+6 more)
rtps/: CMakeLists.txt  INSTALL  README  TODO
rtpslib/: CMakeLists.txt  README  RTPS.cpp  RTPS.h  RTPSettings.cpp  RTPSettings.h  gtod_windows.cpp  gtod_windows.h  materials_lights.h  rtps_common.h  structs.cpp  structs.h  timege.cpp  timege.h  timer_eb.cpp  timer_eb.h  util.cpp  util.h
test/: CMakeLists.txt  main.cpp  main_flock.cpp  main_multi.cpp  main_multigpu.cpp  main_multigpu_imageproc.cpp  main_outer.cpp  main_simple.cpp
(+1273 files in other folders)
